--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   "author": "Bobby Sudekum",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^2.1.4",
     "leaflet": "^0.7.5",
     "leaflet-iiif": "0.0.8",
-    "react": "^0.13.1",
+    "react": "^0.13.3",
     "react-keybinding": "2.0.0-beta"
   },
   "devDependencies": {
