--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "MapTab",
-  "version": "1.1.12",
+  "name": "David Rumsey Map Collection - MapTab",
+  "version": "0.1",
   "description": "A new tab Chrome extension",
   "main": "index.js",
   "scripts": {
